--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "completo": "npm install sqlite sqlite3"
   },
   "dependencies": {
+    "dotenv": "^17.2.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
