--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "completo": "npm install sqlite sqlite3 js-cookie bcrypt"
+    "completo": "npm install sqlite sqlite3 js-cookie bcrypt lucide-react"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.541.0",
     "next": "15.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
